Twenty Fourteen: avoid overflow for `audio` and similar elements. Fixes #26426. Built from https://develop.svn.wordpress.org/trunk@26655
git-svn-id: http://core.svn.wordpress.org/trunk@26545 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -89,6 +89,7 @@ audio,
 canvas,
 video {
 	display: inline-block;
+	max-width: 100%;
 }
 
 html {
